# quick-ai

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: api.md  app.md  doc.mdx  modules.md  settings.md  ui.md
examples/: llmclient_test.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/cli/: CMakeLists.txt  no_streaming_llm_client_cli.cpp  nostreaming_llmclient_cli.cpp  streaming_llm_client_cli.cpp  streaming_llmclient_cli.cpp
src/app/quick-ai/: CMakeLists.txt  main.cpp
src/qalib/: CMakeLists.txt  client.cpp  conversation.cpp  deepseek_adapter.cpp  deepseekadapter.cpp  llm_adapter_interface.cpp  llm_client.cpp  llm_client_base.cpp  llm_client_factory.cpp  llm_conversation.cpp  llmadapterinterface.cpp  llmclient.cpp  openai_client.cpp
src/qalib/include/config/: models.h
src/qalib/include/llm/: client.h  conversation.h  deepseek_adapter.h  deepseekadapter.h  llm_adapter_interface.h  llm_client.h  llm_client_base.h  llm_client_factory.h  llm_conversation.h  llm_models.h  llmclient.h  llminterface.h  model_adapter_factory.h  modeladapterfactory.h  models.h  openai_client.h
src/qalog/: CMakeLists.txt  QALog.cpp
src/qalog/include/: QALog.h
src/qaservice/: CMakeLists.txt  ChatSevice.cpp  ChatViewModel.cpp  ConfigService.cpp  ConfigViewModel.cpp  MessageListModel.cpp
src/qaservice/include/ChatService/: ChatService.h
src/qaservice/include/ChatViewModel/: ChatViewModel.h
src/qaservice/include/ConfigService/: ConfigService.h
src/qaservice/include/ConfigViewModel/: ConfigViewModel.h
src/qaservice/include/MessageListModel/: MessageListModel.h
src/qaui/: CMakeLists.txt  InputView.qml  Main.qml  SessionView.qml  StatusBar.qml  qmldir
tests/: CMakeLists.txt  conversation_test.cpp  deepseek_adapter_test.cpp  deepseekadapter_test.cpp  llm_client_test.cpp  llm_http_server.cpp  openai_client_test.cpp
tests/LLMHttpServer/: CMakeLists.txt
tests/LLMHttpServer/include/: llmhttpserver.h
tests/include/llm_http_server/: llm_http_server.h
